
[package]
authors = ["Subham Shaw , India <shaw.subham14.05.2002@gmail.com>"]
categories = ["command-line-utilities", "graphics"]
description = "Convert images to ASCII art (CLI + library)."
documentation = "https://docs.rs/ascim"
edition = "2021"
keywords = ["ascii", "ascii-art", "image", "cli"]
license-file = "LICENSE"
name = "ascim"
readme = "README.md"
repository = "https://github.com/subham008/ascim"
version = "1.0.0"

[dependencies]
image = "0.25.8"
term_size = "0.3.2"
